# massMusicTagger

./: .cspell.json  .gitignore  LICENSE  README.md  format_preview.py  pyproject.toml
conf/: README.md  char_substitutions.yaml  config.yaml  config_sample.yaml  discogs.yaml  discogs_sample.yaml  format_codes.yaml  formats.ini  formats_personal.ini  formats_sample.ini  musicbrainz.yaml  musicbrainz_sample.yaml  preview_cases.yaml  source_hints.yaml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docker/config/: README.md  config.yaml  config_personal.yaml  discogs.yaml  musicbrainz.yaml
docs/: HISTORY.md  sources.md  tagging_reference.md
src/massmusictagger/: __main__.py  cascade.py  image_utils.py  processor.py  source_factory.py  source_interface.py
src/massmusictagger/sources/musicbrainz/: album.py  connector.py  search.py
test/: conftest.py  test_cascade.py  test_image_source.py  test_image_utils.py  test_mb_album.py  test_mb_search.py  test_processor.py
