[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "massmusictagger"
version = "1.0.0"
description = "Multi-source mass audio tagger — Discogs and MusicBrainz with cascading fallback"
requires-python = ">=3.10"
license = {text = "GPL-2.0-or-later"}

dependencies = [
    # Shared core + Discogs adapter: album model, taggerutils, tag writing,
    # charmap, formatcodes, discogs_search, discogsalbum, discogs_connector.
    # Point at master branch; update the ref when discogstagger3 cuts releases.
    "discogstagger3 @ git+https://github.com/sjbrownrigg/discogstagger3.git@master",

    # MusicBrainz
    "musicbrainzngs>=0.7.1",

    # Mass-tagger UX
    "rich>=13.0",
]

[project.optional-dependencies]
acoustid = [
    # AcoustID fingerprinting — requires fpcalc binary (chromaprint package).
    # Install with: pip install massmusictagger[acoustid]
    "pyacoustid>=1.3",
]
dev = [
    "pytest>=9.0",
    "pytest-cov",
]

[project.scripts]
mmt = "massmusictagger.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
